footer and settle manually link colors

--- a/packages/nouns-webapp/src/components/Footer/Footer.module.css
+++ b/packages/nouns-webapp/src/components/Footer/Footer.module.css
@@ -23,7 +23,7 @@
 
 .footerSignature a {
   text-decoration: none;
-  color: black;
+  /* color: black; */
   margin: 8px 14px;
   transition: all 0.15s ease-in-out;
 }
