Connect button bg color

--- a/packages/nouns-webapp/src/components/NavBarButton/NavBarButton.module.css
+++ b/packages/nouns-webapp/src/components/NavBarButton/NavBarButton.module.css
@@ -81,7 +81,7 @@
 }
 
 .warmWallet {
-  background-color: var(--brand-warm-accent);
+  /* background-color: var(--brand-warm-accent); */
   border: 1px solid var(--brand-warm-border);
   border-radius: 10px;
   color: var(--brand-warm-dark-text);
